Checkpoint show result tables and sort columns
Checkpoint score results

Changes to layout and result pages

Removed column and added color for participants not fully judged

Removed column and added color for participants not fully judged

Added check for null scores

Added release artifact

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -13,3 +13,13 @@
     font-weight: bold;
 }
 
+/* Use these two style properties to display a simple arrow
+ * on the column header when sorting tables. 
+th.sorted.ascending:after {
+    content: "  \2191";
+}
+
+th.sorted.descending:after {
+    content: " \2193";
+}
+*/
